--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,12 @@ dependencies:
   http: ^1.1.0
   intl: ^0.18.1
 
+flutter:
+  assets:
+    - img/Logo-Apptower.png
+  uses-material-design: true
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-
-flutter:
-  uses-material-design: true
