--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_map: ^5.0.0
+  geolocator: ^10.0.1
   http: ^1.1.0
+  image_picker: ^1.0.4
   intl: ^0.18.1
+  latlong2: ^0.9.0
   path: ^1.8.3
   path_provider: ^2.1.1
 
 flutter:
   assets:
-    - img/
+    - img/icono.png
   uses-material-design: true
+  
+
+  
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "img/icono.png" 
+
